--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
             </nav>
             <address>
                 <ul class="address list">
-                    <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                    <li class="item"><a href="mailto:info@devstudio.com" class="link">
+                        <svg class="icon"><use href="./images/sprite.svg#ico-email"></use></svg> info@devstudio.com</a>
                     </li>
-                    <li class="item"><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
+                    <li class="item"><a href="tel:+110001111111" class="link">
+                        <svg class="icon"><use href="./images/sprite.svg#ico-phone"></use></svg> +11 (000) 111-11-11</a></li>
                 </ul>
             </address>
         </div>
@@ -51,26 +53,28 @@
                 <h2 class="invisible">Company Principles</h2>
                 <ul class="list">
                     <li class="item">
+                        <!-- <div class="icon"><svg><use href="./images/sprite.svg#ico-radar" width="64"></use></svg></div> -->
                         <h3 class="title">Strategy</h3>
                         <p class="base-text">Our goal is to identify the business problem to walk away with the perfect
-                            and
-                            creative solution. </p>
+                            and creative solution. </p>
                     </li>
                     <li class="item">
+                        <!-- <div class="icon"><svg><use href="./images/sprite.svg#ico-clock" width="64"></use></svg></div> -->
                         <h3 class="title">Punctuality</h3>
                         <p class="base-text">Bring the key message to the brand's audience for the best price within the
                             shortest possible time.</p>
                     </li>
                     <li class="item">
+                        <!-- <div class="icon"><svg><use href="./images/sprite.svg#ico-diagram" width="64"></use></svg></div> -->
                         <h3 class="title">Diligence</h3>
                         <p class="base-text">Research and confirm brands that present the strongest digital growth
                             opportunities and minimize risk.</p>
                     </li>
                     <li class="item">
+                        <!-- <div class="icon"><svg><use href="./images/sprite.svg#ico-astronaut" width="64"></use></svg></div> -->
                         <h3 class="title">Technologies</h3>
                         <p class="base-text">Design practice focused on digital experiences. We bring forth a deep
-                            passion
-                            for problem-solving.</p>
+                            passion for problem-solving.</p>
                     </li>
                 </ul>
             </div>
@@ -87,29 +91,111 @@
             </div>
         </section>
 
-        <section class="team section">
+        <section class="teams section">
             <div class="container">
                 <h2 class="title">Our Team</h2>
-                <ul class="list">
+                <ul class="team list">
                     <li class="item">
                         <img src="./images/workers/mark_guerrero.jpg" alt="Mark Guerrero photo" width="264" height="260">
                         <h3 class="title">Mark Guerrero</h3>
                         <p class="base-text">Product Designer</p>
+                        <ul class="sociales list">
+                            <li class="item">
+                                <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#ico-ig"></use></svg></a>
+                            </li>
+                            <li class="item">
+                                <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#ico-tw"></use></svg></a>
+                            </li>
+                            <li class="item">
+                                <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#ico-fb"></use></svg></a>
+                            </li>
+                            <li class="item">
+                                <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#ico-in"></use></svg></a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="item">
                         <img src="./images/workers/tom_ford.jpg" alt="Tom Ford photo" width="264" height="260">
                         <h3 class="title">Tom Ford</h3>
                         <p class="base-text">Frontend Developer</p>
+                        <ul class="sociales list">
+                            <li class="item">
+                                <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#ico-ig"></use></svg></a>
+                            </li>
+                            <li class="item">
+                                <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#ico-tw"></use></svg></a>
+                            </li>
+                            <li class="item">
+                                <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#ico-fb"></use></svg></a>
+                            </li>
+                            <li class="item">
+                                <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#ico-in"></use></svg></a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="item">
                         <img src="./images/workers/camila_garcia.jpg" alt="Camila Garcia photo" width="264" height="260">
                         <h3 class="title">Camila Garcia</h3>
                         <p class="base-text">Marketing</p>
+                        <ul class="sociales list">
+                            <li class="item">
+                                <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#ico-ig"></use></svg></a>
+                            </li>
+                            <li class="item">
+                                <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#ico-tw"></use></svg></a>
+                            </li>
+                            <li class="item">
+                                <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#ico-fb"></use></svg></a>
+                            </li>
+                            <li class="item">
+                                <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#ico-in"></use></svg></a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="item">
                         <img src="./images/workers/daniel_wilson.jpg" alt="Daniel Wilson photo" width="264" height="260">
                         <h3 class="title">Daniel Wilson</h3>
                         <p class="base-text">UI Designer</p>
+                        <ul class="sociales list">
+                            <li class="item">
+                                <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#ico-ig"></use></svg></a>
+                            </li>
+                            <li class="item">
+                                <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#ico-tw"></use></svg></a>
+                            </li>
+                            <li class="item">
+                                <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#ico-fb"></use></svg></a>
+                            </li>
+                            <li class="item">
+                                <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#ico-in"></use></svg></a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="customers section">
+            <div class="container">
+                <h2 class="title">Customers</h2>
+                <ul class="list">
+                    <li class="item">
+                        <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#logo-client1"></use></svg></a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#logo-client2"></use></svg></a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#logo-client3"></use></svg></a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#logo-client4"></use></svg></a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#logo-client5"></use></svg></a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#logo-client6"></use></svg></a>
                     </li>
                 </ul>
             </div>
@@ -121,6 +207,23 @@
                 <a href="./index.html" class="logo link">Web<span class="cloud">Studio</span></a>
                 <p class="base-text whitecol">Increase the flow of customers and sales for your business with digital
                     marketing & growth solutions.</p>
+            </div>
+            <div class="social">
+                <p class="whitecol">Social media</p>
+                <ul class="sociales list">
+                    <li class="item">
+                        <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#ico-ig"></use></svg></a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#ico-tw"></use></svg></a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#ico-fb"></use></svg></a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#ico-in"></use></svg></a>
+                    </li>
+                </ul>
             </div>
         </div>
     </footer>
