--- a/portfolio.html
+++ b/portfolio.html
@@ -144,6 +144,23 @@
                 <p class="base-text whitecol">Increase the flow of customers and sales for your business with digital
                     marketing & growth solutions.</p>
             </div>
+            <div class="social">
+                <p class="whitecol">Social media</p>
+                <ul class="sociales list">
+                    <li class="item">
+                        <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#ico-ig"></use></svg></a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#ico-tw"></use></svg></a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#ico-fb"></use></svg></a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link"><svg class="icon"><use href="./images/sprite.svg#ico-in"></use></svg></a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
