--- a/portfolio.html
+++ b/portfolio.html
@@ -33,9 +33,11 @@
             </nav>
             <address>
                 <ul class="address list">
-                    <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                    <li class="item"><a href="mailto:info@devstudio.com" class="link">
+                        <svg class="icon"><use href="./images/sprite.svg#ico-email"></use></svg> info@devstudio.com</a>
                     </li>
-                    <li class="item"><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
+                    <li class="item"><a href="tel:+110001111111" class="link">
+                        <svg class="icon"><use href="./images/sprite.svg#ico-phone"></use></svg> +11 (000) 111-11-11</a></li>
                 </ul>
             </address>
         </div>
